Wed Sep  5 22:07:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          The generated 2-arg FooDataReaderImpl::lookup_instance() needs to
          check the header for key_fields_only_.

        * tests/DCPS/Deadline/publisher.cpp:

          Updated expected values for number of deadlines missed during a 9
          second sleep (2 deadline periods).

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/Watchdog.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Corrected doxygen comment and log message.

Tue Sep  4 22:00:50 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          The 2-arg form of DataReader::lookup_instance() requires its own
          duplicated message block, because it deserializes (moves rd_ptr).

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp:

          Cancelling a timer in the reactor can't be done with a lock held,
          if that same lock is used by handle_timeout.  Doing that can
          deadlock the reactor because its own internal lock is held during
          the handle_timeout upcall and also used by cancel_timer.

        * tests/DCPS/Ownership/publisher.cpp:
        * tests/DCPS/Ownership/run_test.pl:
        * tests/DCPS/Ownership/subscriber.cpp:

          Correctly initialize "infinite" constants for deadline and liveliness
          so that they are really not used unless the command line args enable.

Tue Sep  4 19:13:27 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/Ownership/rtps.ini:
        * tests/DCPS/Ownership/run_test.pl:

          Extend test to be able to run with rtps discovery
          and rtps_udp.

Tue Sep  4 17:45:21 UTC 2012  Adam Mitz  <mitza@ociweb.com>


        * dds/DCPS/transport/framework/TransportRegistry.h:
        * dds/DCPS/transport/framework/TransportRegistry.cpp:
